--- a/YWWACP_Core/YWWACP.Core/YWWACP.Core.csproj
+++ b/YWWACP_Core/YWWACP.Core/YWWACP.Core.csproj
@@ -58,18 +58,18 @@
     <Compile Include="System\Threading\Thread.cs" />
     <Compile Include="ViewModels\Community\CommentsViewModel.cs" />
     <Compile Include="ViewModels\Community\ComunityViewModel.cs" />
-    <Compile Include="ViewModels\CreateExerciseViewModel.cs" />
+    <Compile Include="ViewModels\ExerciseRecipe\CreateExerciseViewModel.cs" />
     <Compile Include="ViewModels\Community\CreateNewThreadViewModel.cs" />
     <Compile Include="ViewModels\Community\DeleteThreadViewModel.cs" />
-    <Compile Include="ViewModels\CreateNewRecipeViewModel.cs" />
+    <Compile Include="ViewModels\ExerciseRecipe\CreateNewRecipeViewModel.cs" />
     <Compile Include="ViewModels\Diary\DiaryDayViewModel.cs" />
     <Compile Include="ViewModels\Diary\DiaryViewModel.cs" />
     <Compile Include="ViewModels\Health Plan\ExercisePickDay.cs" />
     <Compile Include="ViewModels\Health Plan\MealPickDate.cs" />
     <Compile Include="ViewModels\Profile\EditProfileFirstTimeViewModel.cs" />
     <Compile Include="ViewModels\Profile\EditProfileViewModel.cs" />
-    <Compile Include="ViewModels\ExerciseViewModel.cs" />
-    <Compile Include="ViewModels\FirstViewModel.cs" />
+    <Compile Include="ViewModels\ExerciseRecipe\ExerciseViewModel.cs" />
+    <Compile Include="ViewModels\ExerciseRecipe\FirstViewModel.cs" />
     <Compile Include="ViewModels\Goal\GraphViewModel.cs" />
     <Compile Include="ViewModels\Health Plan\AddExerciseViewModel.cs" />
     <Compile Include="ViewModels\Health Plan\AddMealViewModel.cs" />
@@ -78,15 +78,15 @@
     <Compile Include="ViewModels\Health Plan\HealthPlanMealViewModel.cs" />
     <Compile Include="ViewModels\Health Plan\HealthPlanViewModel.cs" />
     <Compile Include="ViewModels\Health Plan\MealDetailsViewModel.cs" />
-    <Compile Include="ViewModels\ListExercisesViewModel.cs" />
+    <Compile Include="ViewModels\ExerciseRecipe\ListExercisesViewModel.cs" />
     <Compile Include="ViewModels\Community\MyThreadsViewModel.cs" />
     <Compile Include="ViewModels\Goal\NewGoalViewModel.cs" />
     <Compile Include="ViewModels\Profile\ProfileViewModel.cs" />
-    <Compile Include="ViewModels\RecipeViewModel.cs" />
-    <Compile Include="ViewModels\SingleExerciseViewModel.cs" />
-    <Compile Include="ViewModels\SingleRecipeViewModel.cs" />
+    <Compile Include="ViewModels\ExerciseRecipe\RecipeViewModel.cs" />
+    <Compile Include="ViewModels\ExerciseRecipe\SingleExerciseViewModel.cs" />
+    <Compile Include="ViewModels\ExerciseRecipe\SingleRecipeViewModel.cs" />
     <Compile Include="ViewModels\Community\WriteCommentViewModel.cs" />
-    <Compile Include="ViewModels\TakePictureViewModel.cs" />
+    <Compile Include="ViewModels\ExerciseRecipe\TakePictureViewModel.cs" />
     <Compile Include="ViewModels\ViewExerciseDetailsViewModel.cs" />
     <Compile Include="ViewModels\ViewMealDetailsViewModel.cs" />
   </ItemGroup>
